@@ -34,6 +34,7 @@ importFrom(spatstat,is.hole.xypolygon)
 importFrom(spatstat,is.polygonal)
 importFrom(spatstat,owin)
 importFrom(spatstat,plot.im)
+importFrom(spatstat,plot.owin)
 importFrom(spatstat,reverse.xypolygon)
 importFrom(statmod,gauss.quad)
 importFrom(stats,cov2cor)
